=======
CHANGES
=======

1.4.1 (unreleased)
==================

- Nothing changed yet.


1.4.0 (2010-07-08)
==================

- Took zope.securitypolicy refactoring and zope.testing.doctest deprecation
  into account.

- Added ``z3c.etestbrowser.browser.ExtendedTestBrowser``, a variant that
  speaks HTTP instead of directly talking to teh publisher talks to the
  publisher, see `Using testbrowser on the internet`_.


1.3.1 (2010-01-18)
==================

- Added doctest to `long_description` to show up on pypi.

1.3.0 (2009-07-23)
==================

- Updgraded pacakge to lxml 2.2.

- Fixed bug with `normalized_contents` which would break the `open` function
  of test browser if content wasn't parsable as HTML/XML.

1.2.0 (2008-05-29)
==================

- Added `normalized_contents` attribute that reindents and normalizes the
  etree structure of a document and allows easier to read HTML/XML examples in
  doctests.