@@ -5,7 +5,10 @@ CHANGES
 1.4.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Added ``z3c.etestbrowser.wsgi.ExtendedTestBrowser``, a variant that can be
+  used when the test layer was set up using ``using
+  zope.app.wsgi.testlayer``. see `Extended testbrowser using
+  zope.app.wsgi.testlayer`_.
 
 
 1.4.0 (2010-07-08)
